[tool.poetry]
name = "conlang-gpt"
version = "0.1.0"
description = "ChatGPT language generator and translator"
authors = ["Caleb Sacks <16855387+clabe45@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/clabe45/conlang-gpt"
keywords = ["conlang", "chatgpt", "gpt 4", "openai"]
license = "MIT"
packages = [{include = "conlang_gpt"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
click = "^8.1.3"


[tool.poetry.scripts]
conlang = "conlang_gpt.__init__:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
