[tool.poetry]
name = "conlang-gpt"
version = "0.3.1"
description = "ChatGPT language generator and translator"
authors = ["Caleb Sacks <16855387+clabe45@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/clabe45/conlang-gpt"
keywords = ["conlang", "chatgpt", "gpt 4", "openai"]
license = "MIT"
packages = [{include = "conlang_gpt"}]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
openai = {extras = ["embeddings"], version = "^0.27.8"}
python-dotenv = "^1.0.0"
click = "^8.1.3"


[tool.poetry.scripts]
conlang = "conlang_gpt.cli:cli"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
